Fixed footer bug — overflow error***

--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,6 +1,7 @@
 .footer {
 	&__container {
-
+		height: 200px;
+		background-color: black;
 	}
 	&__main {
 		
